# dsl-with-python

./: .gitignore  README.md  pyproject.toml
docs/: Makefile  description.md  dsl-lessons.tex  dsl_model.puml  dsl_model.tikz  legacy_capture.puml  legacy_capture.tikz  presentation.aux  presentation.nav  presentation.out  presentation.snm  presentation.tex  presentation.toc  presentation.vrb
docs/_minted/: 1719A886644986CE76A518A6CD8ABA30.highlight.minted  42712C71BD3D7852EC3C84627D545F30.highlight.minted  57B669A165872B82A135256F6670D035.highlight.minted  79D1EDD64D40DEE0965B2EBED3DA6B91.highlight.minted  80F3E987257664B04D07020240A4D572.highlight.minted  8F4A88F5FDC5B8646ADFAC68864AAC04.highlight.minted  91B3EC1F719D427AA6F042F5CF0A1C5F.highlight.minted  A34153D7BD0D81D512D41733E8C39DDF.highlight.minted  D58429A326EEB0E4C7366EA051DCA0CA.highlight.minted  F20DF064BCDE7BBC0345164946C5A829.highlight.minted  F5C99CD74EBFACB28DC7BB321A64C670.highlight.minted  F5F7986F4B2B936864491CC1585A5281.highlight.minted  _2486923A98E77FD0740381D01ACD1782.index.minted
src/: magic2.py  malicious_spells.py  some_app.py  world_spells.py
